# unification

./: .gitignore  README.md  unification.cabal
Control/: Unification.hs  Unifier.hs
Control/Monad/: Binder.hs  Context.hs  Namer.hs
Control/Unification/: Context.hs  Failure.hs
Data/: HasNames.hs  Mapping.hs  Substitution.hs  Term.hs
Data/Mapping/: Partial.hs
Data/Term/: Exp.hs  Name.hs
