name:                  unification
version:               0.1.0.0
synopsis:              Generic context-based unification algorithm.
description:           This package implements unification algorithm which run in MonadContext and therefore can fit seamlessly in many unification use-cases.
license:               MIT
license-file:          LICENSE
author:                Sam T.
maintainer:            Sam T. <sta.cs.vsu@gmail.com>
copyright:             (c) 2012, Sam T.
category:              Data, Unification
build-type:            Simple
cabal-version:         >=1.8

source-repository head
  type:                git
  location:            https://github.com/fmap/unification.git


library
  exposed-modules:     
  -- other-modules:
  build-depends:       base       == 4.5.*
                     , containers == 0.4.*
                     , mtl        == 2.1.*
                     , QuickCheck == 2.4.*
